k8s/ksqldb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tms-demo-ksqldb
  namespace: tms-demo
  labels:
    app: tms-demo-ksqldb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tms-demo-ksqldb
  template:
    metadata:
      labels:
        app: tms-demo-ksqldb
    spec:
      containers:
      - name: tms-demo-ksqldb
        image: confluentinc/ksqldb-server:0.14.0
        volumeMounts:
          - mountPath: /etc/streams/tms-processing-cert
            name: tms-processing-cert
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "100m"
        imagePullPolicy: Always
      volumes:
        - name: tms-processing-cert
          secret:
            secretName: tms-processing-cert
            items:
            - key: client.keystore.p12
              path: client.keystore.p12
            - key: client.truststore.jks
              path: client.truststore.jks
            - key: schema_registry.truststore.jks
              path: schema_registry.truststore.jks
